# Notebook

./: .gitignore  Makefile  README.md  pyproject.toml
agent/: admin.py  constants.py  consumers.py  filter.py  forms.py  models.py  routing.py  urls.py  utils.py  views.py
agent/developer_chatbot/: chatbot.py
agent/developer_chatbot/utils/: nodes.py  prompt.py  state.py
agent/migrations/: 0001_initial.py  0002_message_html_content.py
agent/static/agent/: chat_list.css
agent/templates/agent/: chat_list.html
daybook/: admin.py  filter.py  forms.py  models.py  urls.py  views.py
daybook/migrations/: 0001_initial.py  0002_rename_note_entries.py  0003_alter_entries_options_rename_date_entries_created_at_and_more.py
daybook/templates/daybook/: entries_list.html
home/: urls.py  views.py
home/templates/home/: index.html
mixins/: models.py  view.py
notebook/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
notebook/middleware/: htmx_messages.py
notes/: filter.py  forms.py  models.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_alter_article_options_alter_code_options_and_more.py  0003_set_user_from_section.py  0004_alter_links_title.py  0005_rename_image_description_image_description_and_more.py  0006_alter_image_description_alter_links_created_at.py  0007_section_last_visited_at_topic_last_visited_at.py
notes/static/notes/: style.css
notes/templates/notes/: section_detail.html  topic_detail.html  topic_list.html
notes/views/: __init__.py  section.py  section_articles.py  section_codes.py  section_images.py  section_links.py  topic.py
src/notebook/: db.sqlite3  manage.py
static/css/: login_page.css  main.css
static/js/: init_highlight_afterSwap.js  messages.js
tasks/: filter.py  forms.py  manager.py  models.py  table.py  urls.py
tasks/migrations/: 0001_initial.py  0005_alter_taskcomment_task.py  0006_alter_task_status.py  0007_alter_task_status.py
tasks/views/: task.py  task_comment.py
templates/: base.htm  base.html  header.html  navbar.html
templates/account/: login.html  logout.html
templates/partials/: messages.html  modals.html  svgs.html
(+62 files in other folders)
