[project]
name = "notebook"
version = "0.1.0"
description = "Notebook for my planning and tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "django-crispy-forms>=2.5",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-tables2>=2.8.0",
    "django-widget-tweaks>=1.5.0",
    "ipython>=9.7.0",
    "mypy>=1.19.0",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]
